# Qomicex.Tauri

./: .gitignore  .gitmodules  ADR_downloader_migration.md  AGENTS.md  MAPPING_TABLE.yaml  README.md  VERIFICATION_LOG.md  build-release.ps1  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  update.md  vite.config.ts
.firecrawl/: install-check.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-backend.yml  release.yml
.opencode/: AGENTS.md
.opencode/plans/: 2026-07-03-about-page-design.md  2026-07-03-account-encryption-and-token-refresh.md  fix-natives-extraction.md
.superpowers/sdd/: final-diff.txt  final-fix-report.md  final-review-da236ad..d1286fb.diff  final-review.diff  progress-java-runtime.md  progress.md  review-25bf8cc..bc29338.diff  review-50ece1d..b85027f.diff  review-6a9d1f6..8eef614.diff  review-8eef614..25bf8cc.diff  review-b85027f..25b0547.diff  review-bc29338..e8de352.diff  review-da236ad..1a26514.diff  review-f6d5212..d1286fb.diff  task-1-brief.md  task-1-diff.txt  task-1-report-java-runtime.md  task-1-report.md  task-1-review-package-java-runtime.md  task-10-brief.md  task-10-report.md  (+33 more)
public/: icon.png.bak
scripts/: bench-downloader.ps1  build-mcmod-data.mjs  bump-version.mjs  fetch-license-core.ps1  fetch-license-core.sh  test-api-filters.sh
src/: App.tsx  index.css  vite-env.d.ts
src-backend/: Directory.Build.props
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dialog_cmd.rs  lib.rs  main.rs
(+422 files in other folders)
